[package]
name = "dois-mil"
description = "2048 game in the terminal!"
version = "1.0.0"
authors = ["Rafael Escobar <rescobar@protonmail.com>"]
repository = "https://github.com/Nhanderu/dois-mil/"
license-file = "LICENSE"
readme = "README.md"
keywords = [
    "2048",
    "tty",
    "game",
]

[dependencies]
termion = "1.5.5"
rand = "0.7.3"
