[package]
name = "dois-mil"
description = "2048 game in the terminal!"
version = "1.0.1"
authors = ["Rafael Escobar <rescobar@protonmail.com>"]
repository = "https://github.com/Nhanderu/dois-mil/"
license = "Unlicense"
readme = "README.md"
categories = ["games"]
keywords = ["2048", "tty", "game"]

[dependencies]
termion = "1.5.5"
rand = "0.7.3"
